--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,20 @@ MANIFEST
 *.swp
 *~
 .DS_Store
+simple_neuro_network/.venv/pyvenv.cfg
+simple_neuro_network/.venv/bin/activate
+simple_neuro_network/.venv/bin/activate.csh
+simple_neuro_network/.venv/bin/activate.fish
+simple_neuro_network/.venv/bin/Activate.ps1
+simple_neuro_network/.venv/bin/f2py
+simple_neuro_network/.venv/bin/fonttools
+simple_neuro_network/.venv/bin/pip
+simple_neuro_network/.venv/bin/pip3
+simple_neuro_network/.venv/bin/pip3.12
+simple_neuro_network/.venv/bin/pyftmerge
+simple_neuro_network/.venv/bin/pyftsubset
+simple_neuro_network/.venv/bin/python
+simple_neuro_network/.venv/bin/python3
+simple_neuro_network/.venv/bin/python3.12
+simple_neuro_network/.venv/bin/ttx
+simple_neuro_network/.venv/share/man/man1/ttx.1
